Bug 433667 - Unable to select sound file
Summary: Unable to select sound file
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: notifications (other bugs)
Version First Reported In: unspecified
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-26 17:15 UTC by deltaquadwiki
Modified: 2023-06-25 17:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.9.23043
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description deltaquadwiki 2021-02-26 17:15:26 UTC
Version 1.8.210370
SUMMARY
Konversation can't see any audio files

STEPS TO REPRODUCE
1. Settings>Configure Konversation>Highlight>Sound>Add file
2. Navigate to folder with sound

OBSERVED RESULT
No audio files despite different formats.

EXPECTED RESULT
See and select audio files

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Friedrich W. H. Kossebau 2023-06-25 17:20:10 UTC
Git commit fd8907a4b3d2c472b48e262896b318e387482322 by Friedrich W. H. Kossebau.
Committed on 25/06/2023 at 17:19.
Pushed by kossebau into branch 'release/23.04'.

Highlights sounds file picker: fix setting file filter by MIME types

"filter" property does not know anything about them, needs
explicit method call.
FIXED-IN: 1.9.23043

M  +1    -0    src/config/highlight_config.cpp
M  +0    -3    src/config/highlight_configui.ui

https://invent.kde.org/network/konversation/-/commit/fd8907a4b3d2c472b48e262896b318e387482322
Comment 2 Friedrich W. H. Kossebau 2023-06-25 17:51:47 UTC
Git commit 7d2ff5e47fa2d154f264e6f2fe7028b7a09ad1d5 by Friedrich W. H. Kossebau.
Committed on 25/06/2023 at 17:51.
Pushed by kossebau into branch 'master'.

Highlights sounds file picker: fix setting file filter by MIME types

"filter" property does not know anything about them, needs
explicit method call.
FIXED-IN: 1.9.23043
(cherry picked from commit fd8907a4b3d2c472b48e262896b318e387482322)

M  +1    -0    src/config/highlight_config.cpp
M  +0    -3    src/config/highlight_configui.ui

https://invent.kde.org/network/konversation/-/commit/7d2ff5e47fa2d154f264e6f2fe7028b7a09ad1d5