Highlights sounds file picker: fix setting file filter by MIME types

"filter" property does not know anything about them, needs
explicit method call.

BUG: 433667
FIXED-IN: 1.9.23043
(cherry picked from commit fd8907a4b3d2c472b48e262896b318e387482322)